--- a/style.css
+++ b/style.css
@@ -1,42 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@100;200;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap');
+
+* {
+    outline: 1px solid red;
+}
 
 :root {
-    font-size: 16px;
+    font-size: max(10%, 20px);
+    font-family: 'Yanone Kaffeesatz', sans-serif;
     line-height: 1.5;
-    font-family: 'Grandstander', cursive;
 }
 
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: auto;
+
     background: linear-gradient(90deg,
             rgba(4, 118, 242, 1) 0%,
             rgba(121, 9, 73, 1) 80%,
             rgba(240, 19, 30, 1) 100%);
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-}
 
-.window {
-    height: calc(100vh - 40px);
-    display: flex;
-    margin: 20px;
-    justify-content: center;
-    align-self: center;
-    flex: auto;
-    overflow: hidden;
-    border-radius: 10px;
-}
-
-.image {
-    width: 50%;
-    min-height: 100%;
-    padding: 0;
-    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/* SECTION Main Window */
+
+.window {
+    margin: 20px;
+    height: calc(100vh - 5%);
+    width: calc(100vw - 5%);
+
+    border-radius: 10px;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-self: center;
+}
+
+/* SECTION: Image */
+.image {
+    /* min-width: max-content; */
+    max-width: 40%;
+    /* min-width: 300px; */
+    min-height: 35%;
+    max-height: min-content;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+
+    /* DIV Background */
     position: relative;
     background-image: linear-gradient(80deg,
             rgba(4, 119, 242) 0%,
@@ -50,48 +68,95 @@ body {
 .logo {
     position: absolute;
     width: 100%;
-    height: calc(25% - 30px);
-    top: 20%;
+    min-width: 300px;
+    height: fit-content;
+
     display: flex;
     justify-content: center;
     align-items: center;
+
     background-color: rgba(11, 1, 36, 0.415);
 }
 
 .logo img {
-    position: absolute;
-    width: 25%;
-    height: auto;
+    /* position: absolute; */
+    width: max(150px, 15%);
 }
 
+/* !SECTION */
+
+/* SECTION: Form */
 .form {
-    background-color: rgba(240, 248, 255, 0.70);
-    width: 50%;
-    height: auto;
-    padding: 10px;
+    max-width: 60%;
+    /* min-width: 500px; */
+    padding: min(2%, 10px);
+
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    flex: 1;
+
+    background-color: rgba(240, 248, 255, 0.70);
 }
 
 form {
-    display: flex;
-    width: 80%;
-    margin: 20px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
+    width: 100%;
 
-.field {
-    width: clamp(320px, 70%, 50rem);
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     align-items: center;
+    align-content: space-between;
+    gap: 10px;
+    align-self: center;
 }
 
 form label {
     align-self: flex-start;
 }
+
+/* SECTION Text Input */
+.field {
+    width: min(250px, 60%);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex: 1 1 30%;
+}
+
+.text {
+    width: 100%;
+}
+
+/* SECTION Character Selection */
+.toggle {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.choice {
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* !SECTION */
+/* !SECTION */
+
+
+.button {
+    max-width: min(100px, 30%);
+    align-self: center;
+}
+
+/* !SECTION */
+/* !SECTION */
