--- a/style.css
+++ b/style.css
@@ -5,9 +5,27 @@
 }
 
 :root {
-    font-size: clamp(10%, 20px, 2rem);
-    font-family: 'Yanone Kaffeesatz', sans-serif;
+    font-size: 20px;
+    font-family: var(--main-font);
     line-height: 1.5;
+    color: var(--default-white);
+
+    --main-font: 'Yanone Kaffeesatz', sans-serif;
+
+    --default-black: rgba(19, 17, 13, 0.7);
+    --default-white: rgba(255, 255, 255, 0.693);
+
+    --dc-light-full: rgba(4, 118, 242, 1);
+    --dc-light-transp: rgba(4, 118, 242, 0.8);
+    --dc-dark: rgba(33, 2, 113, 0.9);
+
+    --rand-light-full: rgba(121, 9, 73, 1);
+    --rand-light-transp: rgba(121, 9, 73, 0.8);
+    --rand-dark: rgb(65, 5, 23, 0.9);
+
+    --marvel-light-full: rgba(240, 19, 30, 1);
+    --marvel-light-transp: rgba(240, 19, 30, 0.8);
+    --marvel-dark: rgba(105, 10, 10, 0.9);
 }
 
 body {
@@ -17,9 +35,9 @@ body {
     /* width: auto; */
 
     background: linear-gradient(90deg,
-            rgba(4, 118, 242, 1) 0%,
-            rgba(121, 9, 73, 1) 80%,
-            rgba(240, 19, 30, 1) 100%);
+            var(--dc-light-full) 0%,
+            var(--rand-light-full) 80%,
+            var(--marvel-light-full) 100%);
 
     display: flex;
     justify-content: center;
@@ -30,10 +48,13 @@ body {
 
 .window {
     margin: 20px;
-    height: calc(100vh - 5%);
-    /* width: calc(100vw - 5%); */
+    /* height: calc(100vh - 40px); */
+    width: calc(100vw - 50px);
+    height: max(calc(100vh - 50px), calc(100% - 50px));
 
     border-radius: 10px;
+
+    box-shadow: 0 15px 25px var(--dc-dark);
 
     display: flex;
     flex-wrap: wrap;
@@ -43,22 +64,22 @@ body {
 
 /* SECTION: Image */
 .image {
-    max-width: max(100%, 40%);
+    /* max-width: max(100%, 40%); */
     min-height: 35%;
     max-height: min-content;
 
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1 2 300px;
+    flex: 1 1.25 300px;
 
     position: relative;
 
     /* DIV Background */
     background-image: linear-gradient(80deg,
-            rgba(4, 119, 242) 0%,
-            rgba(4, 119, 242, 0.8) 40%,
-            rgba(11, 1, 36, 0.9) 100%), url(./assets/DC_Bg.webp);
+            var(--dc-light-full) 0%,
+            var(--dc-light-transp) 40%,
+            var(--dc-dark) 100%), url(./assets/DC_Bg.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -74,7 +95,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    background-color: rgba(11, 1, 36, 0.415);
+    background-color: var(--default-black);
 }
 
 .logo img {
@@ -86,16 +107,22 @@ body {
 
 /* SECTION: Form */
 .form {
-    max-width: max(100%, 60%);
+    /* max-width: max(100%, 60%); */
     padding: min(2%, 10px);
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    flex: 2 1 780px;
+    flex: 1 1 780px;
+    font-size: 1.2rem;
 
-    background-color: rgba(240, 248, 255, 0.70);
+    background-color: var(--default-black);
+}
+
+p:last-of-type {
+    align-self: center;
+    font-weight: 600;
 }
 
 form {
@@ -117,17 +144,62 @@ form label {
 /* SECTION Text Input */
 .field {
     --field-width: min(250px, 60%);
-    max-width: var(--field-width);
+    min-width: var(--field-width);
+
+    position: relative;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    flex: 1 1 33%;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 max(120px, 33%);
 }
+
+/* SECTION Text Entry */
 
 .text {
     width: 80%;
+    height: 2rem;
+    margin: 0 0 1px;
+    padding: 10px 15px 5px;
+
+    border-radius: 3px;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+    font-family: var(--main-font);
 }
+
+.text:focus {
+    border-color: var(--dc-light-transp);
+}
+
+/* ANCHOR Label Edits */
+.text+label {
+    position: absolute;
+    left: 45px;
+    font-size: 0.95rem;
+
+    color: grey;
+
+    transition: transform 0.2s ease-in-out;
+}
+
+.text:focus+label,
+.text.not-empty+label {
+    transform: translateY(-24px);
+    font-size: 0.85rem;
+
+    color: var(--dc-light-full);
+}
+
+.text.invalid:focus+label,
+.text.invalid+label {
+    transform: translateY(-24px);
+    font-size: 0.85rem;
+
+    color: red;
+}
+
+/* !SECTION */
 
 /* SECTION Character Selection */
 .toggle {
@@ -140,12 +212,16 @@ form label {
 
 .choice {
     width: 100%;
-    max-width: var(--field-width);
 
     display: flex;
+    gap: 16px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.choice>.field {
+    width: 50%;
 }
 
 /* !SECTION */
@@ -153,8 +229,39 @@ form label {
 
 
 .button {
-    max-width: min(100px, 30%);
+    font-family: var(--main-font);
+
+    max-width: fit-content;
     align-self: center;
+    cursor: pointer;
+    height: 2rem;
+    padding: 5px 10px 1px;
+
+    background: linear-gradient(80deg,
+            var(--dc-light-transp) 0%,
+            var(--dc-dark) 60%) border-box,
+        linear-gradient(80deg,
+            var(--default-black) 0%,
+            var(--dc-light-full) 60%) padding-box;
+    border: 5px solid transparent;
+    border-radius: 30px;
+
+    font-weight: 500;
+    font-size: 0.85rem;
+    color: var(--default-white);
+
+    transition: 0.3s;
+}
+
+.button:hover {
+    background: linear-gradient(80deg,
+            var(--dc-light-transp) 0%,
+            var(--dc-dark) 60%) border-box,
+        linear-gradient(80deg,
+            var(--dc-light-transp) 0%,
+            var(--dc-dark) 60%) padding-box;
+
+    color: var(--dc-light-transp);
 }
 
 /* !SECTION */
