--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+QLD+Beginner:wght@400;500&family=M+PLUS+Code+Latin:wght@400;500;600&display=swap');
 
 * {
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
 }
 
 :root {
-    font-size: clamp(1rem, 1vw, 2rem);
+    font-size: clamp(15px, 1.5vw, 1rem);
     font-family: var(--main-font);
     line-height: 1.5;
     color: var(--default-white);
@@ -32,8 +32,8 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    /* width: auto; */
+    min-height: 100%;
+    height: min(100vh, 150vh, 200vh);
 
     background: linear-gradient(90deg,
             var(--dc-light-full) 0%,
@@ -49,10 +49,12 @@ body {
 
 .window {
     margin: 20px;
-    /* height: calc(100vh - 40px); */
     width: calc(100vw - 50px);
-    height: max(calc(100vh - 50px), calc(100% - 50px));
+    height: calc(100vh - 50px);
 
+    min-height: fit-content;
+
+    box-sizing: border-box;
     border-radius: 10px;
 
     box-shadow: 0 15px 25px var(--dc-dark);
@@ -66,7 +68,7 @@ body {
 /* SECTION: Image */
 .image {
     /* max-width: max(100%, 40%); */
-    min-height: 35%;
+    min-height: max(35%, 2.5rem, 200px);
     max-height: min-content;
 
     display: flex;
@@ -91,6 +93,7 @@ body {
     width: 100%;
     /* min-width: 300px; */
     height: fit-content;
+    margin: 2rem 0;
 
     display: flex;
     justify-content: center;
@@ -173,51 +176,49 @@ input[type=number]::-webkit-outer-spin-button {
 .text {
     width: 80%;
     height: 2rem;
-    margin: 0 0 0;
-    padding: 20px 15px 0px;
+    margin: 0 0 0px;
+    padding: 20px max(20px, 1rem) 0px;
 
     border-radius: 3px;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
+    border-bottom: 5px;
 
     font-family: var(--side-font);
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 500;
     appearance: none;
 }
 
 .text:focus {
     border-color: var(--dc-light-transp);
+    outline: none;
 }
 
 /* ANCHOR Label Edits */
 .text+label {
     position: absolute;
-    left: 50px;
-    font-size: 0.85rem;
+    left: min(59px, 12%, 3.5rem);
+    font-size: 0.9rem;
     font-weight: 500;
-
     padding: 0;
-    margin: 5px -5px 0px;
-
+    margin: 5px -5px 1px;
     color: grey;
-
     transition: transform 0.2s ease-in-out;
-
     cursor: text;
     user-select: none;
 }
 
 .text:focus+label,
 .text.not-empty+label {
-    transform: translateY(-20px);
-    font-size: 0.75rem;
+    transform: translateY(-.9rem);
+    font-size: 0.85rem;
 
     color: var(--dc-light-full);
 }
 
 .text.invalid:focus+label,
 .text.invalid+label {
-    transform: translateY(-24px);
+    transform: translateY(-.9rem);
     font-size: 0.85rem;
 
     color: red;
@@ -259,6 +260,7 @@ input[type=number]::-webkit-outer-spin-button {
     align-self: center;
     cursor: pointer;
     height: 2rem;
+    margin-top: 10px;
     padding: 5px 10px 1px;
 
     background: linear-gradient(80deg,
