--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     outline: 1px solid red;
+
 }
 
 :root {
@@ -29,17 +30,16 @@
     --marvel-dark: rgba(105, 10, 10, 0.9);
 }
 
+
 body {
     margin: 0;
     padding: 0;
-    min-height: 100%;
-    height: min(100vh, 150vh, 200vh);
+    min-height: fit-content;
 
     background: linear-gradient(90deg,
             var(--dc-light-full) 0%,
             var(--rand-light-full) 80%,
             var(--marvel-light-full) 100%);
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,6 +63,7 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-self: center;
+
 }
 
 /* SECTION: Image */
@@ -70,6 +71,7 @@ body {
     /* max-width: max(100%, 40%); */
     min-height: max(35%, 2.5rem, 200px);
     max-height: min-content;
+    /* max-width: fit-content; */
 
     display: flex;
     justify-content: center;
