--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 body {
     margin: 0;
     padding: 0;
-    min-height: fit-content;
+    min-height: 100vh;
 
     background: linear-gradient(90deg,
             var(--dc-light-full) 0%,
@@ -48,11 +48,9 @@ body {
 /* SECTION Main Window */
 
 .window {
-    margin: 20px;
+    margin: 1.5rem;
     width: calc(100vw - 50px);
     height: calc(100vh - 50px);
-
-    min-height: fit-content;
 
     box-sizing: border-box;
     border-radius: 10px;
@@ -128,7 +126,7 @@ body {
 
 p {
     padding: 0.5rem;
-    font-size: 1.3rem;
+    font-size: 1.25rem;
 }
 
 p:last-of-type {
@@ -237,13 +235,6 @@ input[type=number]::-webkit-outer-spin-button {
 /* !SECTION */
 
 /* SECTION Character Selection */
-.toggle {
-    width: 100%;
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
 
 .choice {
     width: 100%;
@@ -257,6 +248,87 @@ input[type=number]::-webkit-outer-spin-button {
 
 .choice>.field {
     width: 50%;
+}
+
+/* ANCHOR Toggle */
+
+.toggle {
+    width: fit-content;
+    margin: 1.9rem 0rem 0.2rem;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    background-color: var(--default-black);
+
+    border: 3px solid var(--default-black);
+    border-radius: 50px;
+}
+
+.tog {
+    height: 2.5rem;
+    width: 8rem;
+
+    appearance: none;
+    border-radius: 50px;
+    opacity: 0.4;
+}
+
+.tog:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.tog::after {
+    content: attr(data-choice);
+    position: relative;
+
+    font-family: var(--main-font);
+    font-size: 2rem;
+
+    color: white;
+}
+
+.tog:hover::after {
+    color: black;
+}
+
+.tog.dc {
+    background-image: linear-gradient(90deg, var(--dc-light-full) 0%, var(--default-black) 80%);
+}
+
+.tog.rand {
+    background-image: linear-gradient(90deg, var(--rand-light-full) 0%, var(--default-black) 80%);
+}
+
+.tog.marvel {
+    background-image: linear-gradient(90deg, var(--marvel-light-full) 0%, var(--default-black) 80%);
+}
+
+.tog.dc:hover {
+    background-image: linear-gradient(90deg, var(--dc-light-full) 20%, var(--dc-dark) 100%);
+}
+
+.tog.rand:hover {
+    background-image: linear-gradient(90deg, var(--rand-light-full) 20%, var(--rand-dark) 100%);
+}
+
+.tog.marvel:hover {
+    background-image: linear-gradient(90deg, var(--marvel-light-full) 20%, var(--marvel-dark) 100%);
+}
+
+.tog.dc::after {
+    left: 3rem;
+}
+
+.tog.rand::after {
+    left: 1.1rem;
+}
+
+.tog.marvel::after {
+    left: 1.1rem;
 }
 
 /* !SECTION */
@@ -283,7 +355,7 @@ input[type=number]::-webkit-outer-spin-button {
     border-radius: 30px;
 
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: var(--default-white);
 
     transition: 0.3s;
