--- a/style.css
+++ b/style.css
@@ -232,6 +232,12 @@ input[type=number]::-webkit-outer-spin-button {
     color: red;
 }
 
+
+.text.invalid {
+
+    border-bottom-color: red
+}
+
 /* !SECTION */
 
 /* SECTION Character Selection */
@@ -254,7 +260,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .toggle {
     width: fit-content;
-    margin: 1.9rem 0rem 0.2rem;
+    margin: 1rem 0rem 0.2rem;
 
     display: flex;
     flex-direction: row;
