--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     --marvel-light-full: rgba(240, 19, 30, 1);
     --marvel-light-transp: rgba(240, 19, 30, 0.8);
     --marvel-dark: rgba(105, 10, 10, 0.9);
+
 }
 
 
@@ -36,13 +37,15 @@ body {
     padding: 0;
     min-height: 100vh;
 
-    background: linear-gradient(90deg,
+    background-image: linear-gradient(90deg,
             var(--dc-light-full) 0%,
-            var(--rand-light-full) 80%,
+            var(--rand-light-full) 30%,
             var(--marvel-light-full) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
+
+    /* transition: background-image 2s ease-in-out; */
 }
 
 /* SECTION Main Window */
@@ -267,10 +270,10 @@ input[type=number]::-webkit-outer-spin-button {
     justify-content: center;
     align-items: center;
 
-    background-color: var(--default-black);
+    /* background-color: var(--default-black); */
 
-    border: 3px solid var(--default-black);
-    border-radius: 50px;
+    /* border: 3px solid var(--default-black);
+    border-radius: 50px; */
 }
 
 .tog {
@@ -284,7 +287,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 .tog:hover {
     cursor: pointer;
-    opacity: 1;
 }
 
 .tog::after {
@@ -297,7 +299,8 @@ input[type=number]::-webkit-outer-spin-button {
     color: white;
 }
 
-.tog:hover::after {
+.tog:hover::after,
+.tog.select::after {
     color: black;
 }
 
@@ -313,16 +316,22 @@ input[type=number]::-webkit-outer-spin-button {
     background-image: linear-gradient(90deg, var(--marvel-light-full) 0%, var(--default-black) 80%);
 }
 
-.tog.dc:hover {
+.tog.dc:hover,
+.tog.dc.select {
     background-image: linear-gradient(90deg, var(--dc-light-full) 20%, var(--dc-dark) 100%);
+    opacity: 1;
 }
 
-.tog.rand:hover {
+.tog.rand:hover,
+.tog.rand.select {
     background-image: linear-gradient(90deg, var(--rand-light-full) 20%, var(--rand-dark) 100%);
+    opacity: 1;
 }
 
-.tog.marvel:hover {
+.tog.marvel:hover,
+.tog.marvel.select {
     background-image: linear-gradient(90deg, var(--marvel-light-full) 20%, var(--marvel-dark) 100%);
+    opacity: 1;
 }
 
 .tog.dc::after {
