--- a/style.css
+++ b/style.css
@@ -209,15 +209,12 @@ input[type=number]::-webkit-outer-spin-button {
 /* ANCHOR Label Edits */
 .text+label {
     position: absolute;
-    left: min(59px, 3.5rem, 5vw);
+    left: max(2rem, 10%);
     font-size: 0.9rem;
     font-weight: 500;
-
     padding: 0;
     margin: 5px -5px 1px;
-
     color: grey;
-
     transition: transform 0.2s ease-in-out;
     cursor: text;
     user-select: none;
