--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Edu+QLD+Beginner:wght@400;500&family=M+PLUS+Code+Latin:wght@400;500;600&display=swap');
 
-* {
-    /* outline: 1px solid red; */
-
-}
+/* * {
+    outline: 1px solid red;
+} */
 
 :root {
     font-size: clamp(15px, 1.5vw, 1rem);
@@ -206,6 +205,7 @@ input[type=number]::-webkit-outer-spin-button {
     border-bottom-color: var(--light-full);
 }
 
+
 /* ANCHOR Label Edits */
 .text+label {
     position: absolute;
@@ -238,8 +238,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 .text.invalid {
-
     border-bottom-color: rgb(206, 72, 0);
+    background-color: rgb(255, 205, 172);
 }
 
 /* !SECTION */
